syntax = "proto3";

option csharp_namespace = "LibraRestaurant.Proto.Currencies";

message GrpcCurrency {
  int32 id = 1;
  string name = 2;
  string description = 3;
  bool isDeleted = 4;
}

message GetCurrenciesByIdsResult {
  repeated GrpcCurrency currencies = 1;
}

message GetCurrenciesByIdsRequest {
  repeated int32 ids = 1;
}